[package]
name = "QuestionAPI"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-saphyr = "0.0"
uuid = { version = "1", features = ["v4"] }

[profile.release]
lto = true
codegen-units = 1